# Luminance

./: .gitignore  PLAN.md  README.md  audio_visualizer.html  audio_visualizer_requirements.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: engine.rs  file_player.rs  mic_capture.rs  mod.rs  ring_buffer.rs  transport.rs
src-tauri/src/dsp/: analyzer.rs  fft.rs  loudness.rs  mod.rs  rms.rs  stereo.rs  utils.rs  window.rs
src-tauri/src/render/: ffmpeg.rs  mod.rs  offline.rs
src/components/: Layout.tsx  NeonSlider.tsx  Panel.tsx  RenderDialog.tsx  Toolbar.tsx
src/components/visualizers/: Loudness.tsx  Oscilloscope.tsx  Spectrogram.tsx  Spectrum.tsx  Stereometer.tsx  VJVisualizer.tsx  VUMeter.tsx  Waveform.tsx
src/hooks/: useAnimationFrame.ts  useAudioData.ts  useBpm.tsx  useFileAnalysis.ts  useVjText.tsx
src/lib/: canvas.ts  colors.ts  offscreenRenderer.ts  scales.ts
src/styles/: globals.css
