[package]
name = "luminance"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = { version = "0.15", features = [] }
rustfft = "6"
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "aac"] }
crossbeam-channel = "0.5"
rubato = "0.16"
base64 = "0.22"
thiserror = "1"
anyhow = "1"

[lib]
name = "luminance_lib"
crate-type = ["lib", "cdylib", "staticlib"]
